welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:29: error: reassignment to val
        getCouleurSol=c
                     ^SlugSnail:30: error: not found: value c
        if (getCouleurSol()!=c){
                             ^